1. В Configuration добавлена коллекция со всеми дочерними объектами
2. Модифицирован алгритм определения поддержки